tablet menu alignment issue fixed

--- a/css/centrala.css
+++ b/css/centrala.css
@@ -263,7 +263,7 @@ footer {
 	border: 0px;
 	position: relative;
 	transform: translate(-50%, -50%);
-	
+
 
 }
 
@@ -308,7 +308,7 @@ footer {
 	padding-left: 5px;
 	padding-bottom: 5px;
 	padding-top: 5px;
-	margin-top: 0px;
+	margin-top: 8px;
 	}
 
 	}
